# bazel

./: .bazelrc  .clang-format  .gitattributes  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  TODO.md  bazel-complete.bash  bazel.sh  build.sh  clang-tidy  clang-tidy.sh  compile_commands.json  demo.sh  rl.py  run.sh  test.sh
bazel/: package.bzl
bazel/rules/bazel_cross_compile/: build.sh
bazel/rules/bazel_cross_compile/03_toolchain/bazel/toolchain/aarch64-rpi3-linux-gnu/: cc_toolchain_config.bzl
bazel/rules/bazel_cross_compile/03_toolchain/bazel/toolchain/arm-cortex_a8-linux-gnueabihf/: BUILD.bazel
bazel/rules/bazel_cross_compile/04_platforms/: fun.cpp
bazel/rules/bazel_cross_compile/04_platforms/bazel/toolchain/arm-cortex_a8-linux-gnueabihf/: BUILD.bazel
bazel/rules/bazel_install_rules/installer/: def.bzl  installer.bash.template
bazel/rules/proto/: python_rules.bzl
bazel/toolchain/: BUILD.bazel
bazel/toolchain/aarch64_rpi3/: BUILD.bazel  cc_toolchain_config.bzl
bazel/toolchain/clang/: BUILD.bazel  cc_toolchain_config.bzl
bazel/toolchain/riscv/: BUILD.bazel  cc_toolchain_config.bzl
cmake/: CMakeLists.txt  rpi3-toolchain.cmake
pch/: .gitignore  Makefile  main.cc
proto/: BUILD  BUILD.bazel  perf_info.proto  pnc_point.proto  status.proto
proto/test_data/: BUILD.bazel  onnx_test.cc
rules/: apollo_package.bzl  local-deploy.bzl
rules/bazel_cross_compile/: README.md
rules/bazel_cross_compile/03_toolchain/bazel/toolchain/aarch64-rpi3-linux-gnu/: BUILD
rules/bazel_cross_compile/04_platforms/: BUILD  fun.h  main.cpp
rules/bazel_cross_compile/04_platforms/bazel/toolchain/aarch64-rpi3-linux-gnu/: BUILD
rules/bazel_cross_compile/04_platforms/bazel/toolchain/arm-cortex_a8-linux-gnueabihf/: cc_toolchain_config.bzl
rules/hedron_compile_commands/: WORKSPACE
rules/legacy_macros/: miniature.bzl
rules/proto/: proto.bzl
rust/: Cargo.toml
rust/src/: main.rs
src/: BUILD  BUILD.bazel  main.cc  node.cc  test_asan.cc
src/algorithms/: pop-sort.cc
src/common/: common.cc  common.h
src/common/log/: BUILD  BUILD.bazel  log.cc  log.h  log_pimpl.cc  log_pimpl.h  log_test.cc
src/common/math/: BUILD  BUILD.bazel  aabox2d.cc  aabox2d_test.cc  aaboxkdtree2d.h  angle_test.cc  box2d.cc  box2d.h  box2d_test.cc  cartesian_frenet_conversion.cc  cartesian_frenet_conversion_test.cc  hermite_spline.h  integral.cc  kalman_filter.h  kalman_filter_test.cc  line_segment2d.cc  line_segment2d_test.cc  linear_interpolation.cc  linear_interpolation.h  linear_quadratic_regulator.cc  math_utils.cc  math_utils.h  math_utils_test.cc  matrix_operations.h  matrix_operations_test.cc  path_matcher.h  polygon2d.cc  polygon2d_test.cc  quaternion.h  quaternion_test.cc  vec2d.cc  vec2d_test.cc
src/common/math/qp_solver/: BUILD  BUILD.bazel
src/common/utils/: BUILD.bazel  mem_info_utils.cc  mem_info_utils.h
src/component/: planning_component.cc  planning_component.h
src/framework/: BUILD.bazel  component_interface.cc  component_interface.h  component_macro.h  registerer.h
src/modules/: BUILD.bazel
src/modules/control/: BUILD.bazel  control_module.cc  control_module.h
src/modules/planning/: BUILD.bazel  planning_module.cc  planning_module.h
src/modules/planning/tasks/: BUILD.bazel  lat_planning_task.cc  lat_planning_task.h  lat_planning_utils.cc  lat_planning_utils.h
test/: BUILD  BUILD.bazel  foo.cc  foo.h  foo_test.cc  gen_log.sh  log.cc  log_test.cc  signal_handler_test.c  ut_main.cc
toolchain/: BUILD
