###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "protobuf", version = "32.0-rc1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "fmt", version = "11.2.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
# commit: 4f28899228fb3ad0126897876f147ca15026151e
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
local_path_override(
    module_name = "hedron_compile_commands",
    path = "bazel/rules/hedron_compile_commands",
)
bazel_dep(name = "rules_python", version = "1.5.1")

# For common math
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
bazel_dep(name = "osqp", version = "1.0.0")
bazel_dep(name = "glog", version = "0.7.1")

# For install build artifacts
# https://github.com/google/bazel_rules_install.git
# commit: 6001facc1a96bafed0e414a529b11c1819f0cdbe
bazel_dep(name = "com_github_google_rules_install")
local_path_override(
    module_name = "com_github_google_rules_install",
    path = "bazel/rules/bazel_install_rules",
)

# The spdlog pre-built library
# Query this repo info by 'bazel query 'deps(@spdlog)' --output=build'
new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")
new_local_repository(
    name = "spdlog",
    path = "//bazel/rules:apollo_package.bzl/spdlog/",
    build_file_content = """
cc_library(
    name = "spdlog",
    srcs = glob(["**/*.so*"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
""",
)

# -----------------------------------------------------------------------------
# Register toolchains
# -----------------------------------------------------------------------------
bazel_dep(name = "platforms", version = "0.0.11")
register_toolchains(
    # "//bazel/toolchain/aarch64_rpi3:cc_toolchain_for_linux_aarch64_rpi3",
    # "//bazel/toolchain/clang:clang_cc_toolchain_for_linux_x86_64",
    "//bazel/toolchain/riscv:cc_toolchain_for_linux_riscv",
)
