load("//bazel:package.bzl", "pnc_proto_library")

package(default_visibility = ["//visibility:public"])

pnc_proto_library(
    name = "perf_info_proto",
    srcs = ["perf_info.proto"],
)

pnc_proto_library(
    name = "status_proto",
    srcs = ["status.proto"],
)

pnc_proto_library(
    name = "pnc_point_proto",
    srcs = ["pnc_point.proto"],
)

pnc_proto_library(
    name = "onnx_proto",
    srcs = ["onnx.proto"],
)