load("//bazel:package.bzl", "pnc_cc_binary", "pnc_cc_library")

package(default_visibility = ["//visibility:public"])

# -----------------------------------------------------------------------------
# Common target
# -----------------------------------------------------------------------------
pnc_cc_library(
    name = "common",
    srcs = [
        "common/common.cc",
    ],
    hdrs = [
        "common/common.h",
    ],
    deps = [
        "//proto:all_custom_cc_proto",
        "//src/common/math",
    ],
)

# -----------------------------------------------------------------------------
# planning_component
# -----------------------------------------------------------------------------
pnc_cc_library(
    name = "planning_component",
    srcs = [
        "component/planning_component.cc",
    ],
    hdrs = [
        "component/planning_component.h",
    ],
    deps = [
        # "//proto:all_custom_cc_proto",
        "//src/framework",
        "//src/framework:registerer",
        # "//src/common/math",
    ],
)

# -----------------------------------------------------------------------------
# main
# -----------------------------------------------------------------------------
pnc_cc_binary(
    name = "main",
    srcs = ["main.cc"],
    linkopts = ["-ldl"],
    deps = [
        "//src/framework",
        "//src/framework:registerer",
    ],
)

# -----------------------------------------------------------------------------
# node
# -----------------------------------------------------------------------------
pnc_cc_binary(
    name = "node",
    srcs = ["node.cc"],
    linkopts = ["-Wl,-rpath,$ORIGIN"],
    linkshared = True,
    linkstatic = False,
    deps = [
        # "//src:common",
        "//src/framework",
        "//src:planning_component",
    ],
)
