load("//bazel:package.bzl", "pnc_cc_binary", "pnc_cc_library")

package(default_visibility = ["//visibility:public"])

# -----------------------------------------------------------------------------
# Common target
# -----------------------------------------------------------------------------
pnc_cc_library(
    name = "common",
    srcs = [
        "common/common.cc",
    ],
    hdrs = [
        "common/common.h",
    ],
    deps = [
        "//src/common/math",
    ],
)

# -----------------------------------------------------------------------------
# main
# -----------------------------------------------------------------------------
pnc_cc_binary(
    name = "main",
    srcs = ["main.cc"],
    linkopts = ["-ldl"],
    deps = [
        "//src/common/utils:mem_info_utils",
        "//src/framework",
        "//src/framework:registerer",
    ],
)

# -----------------------------------------------------------------------------
# node
# -----------------------------------------------------------------------------
pnc_cc_binary(
    name = "node",
    srcs = [
        "node.cc",
    ],
    linkopts = ["-Wl,-rpath,$ORIGIN"],
    linkshared = True,
    linkstatic = select({
        "//:one_lib": True,
        "//:multi_lib": False,
        "//conditions:default": True,
    }),
    deps = [
        # "//src:common",
        "//src/modules",
        "//src/framework",
        "//thirdparty:tcmalloc",
    ],
)
