package(default_visibility = ["//visibility:public"])

cc_library(
    name = "foo",
    srcs = ["foo.cc"],
    hdrs = ["foo.h"],
)

cc_test(
    name = "log_test",
    size = "small",
    srcs = ["log_test.cc"],
    deps = [
        ":foo",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@spdlog",
    ],
)

cc_library(
    name = "ut_main",
    srcs = ["ut_main.cc"],
    deps = [
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "foo_test",
    size = "small",
    srcs = ["foo_test.cc"],
    deps = [
        ":ut_main",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "signal_hander_test",
    size = "small",
    srcs = ["signal_handler_test.c"],
)

cc_binary(
    name = "thread_sanitizer",
    srcs = ["thread_sanitizer.cc"],
    copts = [
        "-fsanitize=thread",
        "-fno-omit-frame-pointer",
        "-fPIE",
        "-pie",
        "-g",
    ],
)
