load("//rules:apollo_package.bzl", "apollo_cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common_math_vec2d",
    srcs = ["vec2d.cc"],
    hdrs = ["vec2d.h"],
    deps = [
        "//src/common/log",
    ],
)

cc_test(
    name = "vec2d_test",
    size = "small",
    srcs = ["vec2d_test.cc"],
    deps = [
        ":common_math_vec2d",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "aabox2d_test",
    size = "small",
    srcs = [
        "aabox2d_test.cc",
    ],
    deps = [
        ":math",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "math",
    srcs = [
        "aabox2d.cc",
        "angle.cc",
        "box2d.cc",
        "cartesian_frenet_conversion.cc",
        "integral.cc",
        "line_segment2d.cc",
        "linear_interpolation.cc",
        "linear_quadratic_regulator.cc",
        "math_utils.cc",
        "matrix_operations.cc",
        "path_matcher.cc",
        "polygon2d.cc",
        "search.cc",
        "sin_table.cc",
        "vec2d.cc",
    ],
    hdrs = [
        "aabox2d.h",
        "aaboxkdtree2d.h",
        "angle.h",
        "box2d.h",
        "cartesian_frenet_conversion.h",
        "curve_fitting.h",
        "euler_angles_zxy.h",
        "factorial.h",
        "hermite_spline.h",
        "integral.h",
        "kalman_filter.h",
        "line_segment2d.h",
        "linear_interpolation.h",
        "linear_quadratic_regulator.h",
        "math_utils.h",
        "matrix_operations.h",
        "path_matcher.h",
        "polygon2d.h",
        "quaternion.h",
        "search.h",
        "sin_table.h",
        "vec2d.h",
    ],
    linkopts = ["-lm"],
    strip_include_prefix = "/src",
    deps = [
        "//proto:all_custom_cc_proto",
        "//src/common/log",
        "//src/common/math/qp_solver",
        "@eigen",
        "@fmt",
        "@osqp",
    ],
)
