load("//bazel:package.bzl", "pnc_cc_binary", "pnc_cc_library")

package(default_visibility = ["//visibility:public"])

# -----------------------------------------------------------------------------
# planning_module
# -----------------------------------------------------------------------------
pnc_cc_library(
    name = "planning_module",
    srcs = [
        "planning_module.cc",
    ],
    hdrs = [
        "planning_module.h",
    ],
    deps = [
        "//proto:perf_info_cc_proto",
        "//src/common/math:vec2d",
        "//src/framework",
        "//src/framework:registerer",
        "//src/modules/planning/tasks",
        "//thirdparty:spdlog",
    ],
    alwayslink = True,
)
